--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Blog Post</p>
-        <a href=blog.html> <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <a href=blog.html> <img src="ModalMusic.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
         </a></div>
       <div class="w3-third">
         <p>Presentation/Letter</p>
-        <a href="presentation.html"> <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <a href="presentation.html"> <img src="Screenshot%202025-04-07%20at%2023.19.04.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </a></div>
       <div class="w3-third">
         <p>Transformation Project</p>
-        <a href="transformation.html"><img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <a href="transformation.html"><img src="Frank%20Ocean%20Ivy%20Collage.png" class="w3-round" alt="Random Name" style="width:60%">
      </a> </div>
     </div>
   </div>
