--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="blog.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BLOG</a>
     <a href="presentation.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PRESENTATION/LETTER</a>
-    <a href="presentation.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TRANSFORMATION</a>
+    <a href="transformation.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TRANSFORMATION</a>
      <a href="sources.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">WORKS CITED</a>
   </div>
 </div>
